// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateItem component DateItem snapshot test should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-flexDirection-18u37iz r-height-eu3ka"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    style={
      Object {
        "color": "rgba(255,255,255,1.00)",
        "fontFamily": "Roboto-Medium",
        "fontSize": "16px",
        "letterSpacing": "0.16px",
        "lineHeight": "24px",
      }
    }
  >
    Today
    <span
      className="css-textHasAncestor-1jxf684"
      dir={null}
      style={
        Object {
          "color": "rgba(255,255,255,1.00)",
          "fontFamily": "Roboto-Medium",
          "fontSize": "16px",
          "letterSpacing": "0.16px",
          "lineHeight": "24px",
        }
      }
    >
       • 
      22 Apr
    </span>
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    style={
      Object {
        "marginLeft": "auto",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-backgroundColor-nqymb2 r-borderRadius-z2wwpe r-flexDirection-18u37iz r-justifyContent-1777fci r-minHeight-sgkdzr r-minWidth-285fr0 r-paddingBlock-1559e4e r-paddingInline-n7gxbd r-borderColor-t1myqv r-borderWidth-rs99b7"
        dir={null}
      >
        <div
          className="css-text-146c3p1 r-fontFamily-1k9400p r-fontSize-1enofrn r-letterSpacing-3da313 r-lineHeight-56xrmm r-color-hiecfz"
          dir="auto"
        >
          1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateItem component DateItem snapshot test should render correctly 2`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-flexDirection-18u37iz r-height-eu3ka"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  style={
    Object {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1"
    dir="auto"
    style={
      Object {
        "color": "rgba(255,255,255,1.00)",
        "fontFamily": "Roboto-Medium",
        "fontSize": "16px",
        "letterSpacing": "0.16px",
        "lineHeight": "24px",
      }
    }
  >
    Custom date
  </div>
  <div
    className="css-view-g5y9jx"
    dir={null}
    style={
      Object {
        "marginLeft": "auto",
      }
    }
  >
    <div
      className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1777fci"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-backgroundColor-nqymb2 r-borderRadius-z2wwpe r-flexDirection-18u37iz r-justifyContent-1777fci r-minHeight-sgkdzr r-minWidth-285fr0 r-paddingBlock-1559e4e r-paddingInline-n7gxbd r-borderColor-t1myqv r-borderWidth-rs99b7"
        dir={null}
      >
        <div
          className="css-text-146c3p1 r-fontFamily-1k9400p r-fontSize-1enofrn r-letterSpacing-3da313 r-lineHeight-56xrmm r-color-hiecfz"
          dir="auto"
        >
          Q
        </div>
      </div>
    </div>
  </div>
</div>
`;
